prophet to groq for vercel limitation

--- a/Backend/pyproject.toml
+++ b/Backend/pyproject.toml
@@ -10,10 +10,9 @@ dependencies = [
     "sqlalchemy",
     "asyncpg",
     "alembic",
-    "prophet",
     "python-jose[cryptography]",
     "passlib[bcrypt]",
-    "bcrypt==4.0.1",
+    "bcrypt",
     "pydantic-settings",
     "email-validator",
     "httpx",
