--- a/Backend/pyproject.toml
+++ b/Backend/pyproject.toml
@@ -11,8 +11,7 @@ dependencies = [
     "asyncpg",
     "alembic",
     "python-jose[cryptography]",
-    "passlib[bcrypt]",
-    "bcrypt",
+    "passlib[argon2]",
     "pydantic-settings",
     "email-validator",
     "httpx",
