--- a/Frontend/public/manifest.json
+++ b/Frontend/public/manifest.json
@@ -3,6 +3,12 @@
     "name": "Grip - Financial Intelligence",
     "icons": [
         {
+            "src": "logo.svg",
+            "sizes": "192x192 512x512",
+            "type": "image/svg+xml",
+            "purpose": "any maskable"
+        },
+        {
             "src": "pwa-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
