--- a/.github/workflows/monthly-dossier.yml
+++ b/.github/workflows/monthly-dossier.yml
@@ -1,13 +1,13 @@
-name: Intelligence & Lifestyle Insights
+name: Monthly Wealth Dossier
 
 on:
   schedule:
-    # Runs at 4:30 AM UTC (10:00 AM IST) - Every Sunday (for Weekly) and Friday (for Weekend)
-    - cron: '30 4 * * 0,5'
-  workflow_dispatch: # Allows manual trigger
+    # Runs at 5:30 AM UTC (11:00 AM IST) on the 1st of every month
+    - cron: '30 5 1 * *'
+  workflow_dispatch: # Allows manual trigger anytime
 
 jobs:
-  run-insights:
+  run-monthly-report:
     runs-on: ubuntu-latest
     
     steps:
@@ -25,7 +25,7 @@ jobs:
           pip install --upgrade pip
           pip install -r requirements.txt
       
-      - name: Run Insights
+      - name: Run Monthly Report
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
           SMTP_HOST: ${{ secrets.SMTP_HOST }}
@@ -35,25 +35,19 @@ jobs:
           FROM_EMAIL: ${{ secrets.FROM_EMAIL }}
           FROM_NAME: ${{ secrets.FROM_NAME }}
           FRONTEND_ORIGIN: ${{ secrets.FRONTEND_ORIGIN }}
+          GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
+          GROQ_MODEL: ${{ secrets.GROQ_MODEL }}
           ENVIRONMENT: production
         run: |
           cd Backend
           python -c "
           import asyncio
-          from app.core.scheduler import run_weekly_insights, run_lifestyle_insights
-          from datetime import datetime
+          from app.core.scheduler import run_monthly_report
           
           async def main():
-              # Always run lifestyle insights (handles inactivity and Friday weekend alerts)
-              print('Running Lifestyle Insights...')
-              await run_lifestyle_insights()
-              
-              # Run weekly summary on Sundays
-              if datetime.now().weekday() == 6:  # 6 is Sunday
-                  print('Today is Sunday. Running Weekly Insights Summary...')
-                  await run_weekly_insights()
-              
-              print('Insights completed successfully!')
+              print('Forging Monthly Intelligence Dossier...')
+              await run_monthly_report()
+              print('Monthly report finished.')
           
           asyncio.run(main())
           "
