--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -12,6 +12,8 @@ ENABLE_SCHEDULER=true  # Set to false when using external cron (e.g., GitHub Act
 GROQ_API_KEY="your-groq-api-key"
 GROQ_MODEL="llama3-8b-8192"
 
+X_GRIP_HF_LLM_TOKEN= #my hf space llm secret. It will fallbak to groq for you
+
 # Google OAuth (for Gmail sync)
 GOOGLE_CLIENT_ID="your-google-client-id"
 GOOGLE_CLIENT_SECRET="your-google-client-secret"
