Commneted groq to test locslLLM concept

--- a/.github/workflows/gmail_sync.yml
+++ b/.github/workflows/gmail_sync.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Run Gmail Sync
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
-          GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
+          # GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
           GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
           GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
           SMTP_HOST: ${{ secrets.SMTP_HOST }}
