--- a/.github/workflows/monthly-dossier.yml
+++ b/.github/workflows/monthly-dossier.yml
@@ -35,8 +35,8 @@ jobs:
           FROM_EMAIL: ${{ secrets.FROM_EMAIL }}
           FROM_NAME: ${{ secrets.FROM_NAME }}
           FRONTEND_ORIGIN: ${{ secrets.FRONTEND_ORIGIN }}
-          GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
-          GROQ_MODEL: ${{ secrets.GROQ_MODEL }}
+          # GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
+          # GROQ_MODEL: ${{ secrets.GROQ_MODEL }}
           GRIP_HF_LLM_URL: ${{ secrets.GRIP_HF_LLM_URL }}
           X_GRIP_HF_LLM_TOKEN: ${{ secrets.X_GRIP_HF_LLM_TOKEN }}
           ENVIRONMENT: production
