feat(auth/infra): implement Google Login and Vercel Email Relay
- Added "Login with Google" (Approach B) to bypass SMTP/OTP hurdles and provide seamless onboarding.
- Created `EmailService` microservice for Vercel (Approach Relay) to bypass Port 587/465 blocks on cloud hosts.
- Integrated AI-powered witty onboarding emails triggered on user initiation.
- Re-enabled Groq Llama-3 as a robust fallback for the primary Intelligence Engine.
- Updated Privacy Policy and Terms of Service for transparency regarding AI usage and non-commercial status.
- Refined README with a dedicated "Environment & Security Configuration" guide for cloud portability.

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -13,6 +13,8 @@ GROQ_API_KEY="your-groq-api-key"
 GROQ_MODEL="llama3-8b-8192"
 
 X_GRIP_HF_LLM_TOKEN= #my hf space llm secret. It will fallbak to groq for you
+EMAIL_RELAY_URL="" #My External email relay url (Recommended for cloud hosting like HF Spaces as required ports are blocked)
+EMAIL_RELAY_SECRET="the-secret-you-chose"
 
 # Google OAuth (for Gmail sync)
 GOOGLE_CLIENT_ID="your-google-client-id"
